@@ -1,20 +1,13 @@
-from opengever.tabbedview.browser.tabs import Dossiers
 from opengever.tabbedview.helper import linked
-from opengever.tabbedview.helper import readable_ogds_author
 from opengever.workspace import _
+from opengever.tabbedview import BaseCatalogListingTab
 
 
-class Workspaces(Dossiers):
+class Workspaces(BaseCatalogListingTab):
 
-    filterlist_available = False
-    major_actions = []
-    enabled_actions = []
+    types = ['opengever.workspace.workspace']
 
     columns = (
-
-        {'column': 'reference',
-         'column_title': _(u'label_reference', default=u'Reference Number'),
-         'width': 120},
 
         {'column': 'Title',
          'column_title': _(u'label_title', default=u'Title'),
@@ -22,9 +15,15 @@ class Workspaces(Dossiers):
          'transform': linked,
          'width': 500},
 
-        {'column': 'responsible',
-         'column_title': _(u'label_dossier_responsible',
-                           default=u"Responsible"),
-         'transform': readable_ogds_author,
-         'width': 300}
+        {'column': 'Description',
+         'column_title': _(u'label_description',
+                           default=u"Description"),
+         'width': 400}
     )
+
+
+class WorkspaceFolders(Workspaces):
+    """List all workspace-folders recursively.
+    """
+
+    types = ['opengever.workspace.folder']
