@@ -3,7 +3,7 @@ from plone.autoform.interfaces import IFormFieldProvider
 from plone.supermodel import model
 from zope.interface import implements
 from zope.interface import provider
-from opengever.dossier.base import DossierContainer
+from plone.dexterity.content import Container
 
 
 @provider(IFormFieldProvider)
@@ -11,5 +11,5 @@ class IWorkspaceSchema(model.Schema):
     """ """
 
 
-class Workspace(DossierContainer):
+class Workspace(Container):
     implements(IWorkspace)
