@@ -1,9 +1,9 @@
-from opengever.dossier.base import DossierContainer
 from opengever.workspace.interfaces import IWorkspaceFolder
 from plone.autoform.interfaces import IFormFieldProvider
 from plone.supermodel import model
 from zope.interface import implements
 from zope.interface import provider
+from plone.dexterity.content import Container
 
 
 @provider(IFormFieldProvider)
@@ -11,5 +11,5 @@ class IWorkspaceFolderSchema(model.Schema):
     """ """
 
 
-class WorkspaceFolder(DossierContainer):
+class WorkspaceFolder(Container):
     implements(IWorkspaceFolder)
